--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Second Git Repo</title>
 </head>
 <body>
-    
+        <h1>i can push git</h1>
+        <h2>hello everyone</h2>
 </body>
 </html>
