--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
         <h1>i can push git</h1>
         <h2>hello everyone</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, laborum?</p>
 </body>
 </html>
